[gd_scene load_steps=8 format=3 uid="uid://bpxdwm3dr44n0"]

[ext_resource type="Texture2D" uid="uid://btg0bvlrjrrq0" path="res://Sprites/Monsters/hill_giant.png" id="1_4xm8j"]
[ext_resource type="PackedScene" uid="uid://dr76hdscuxgm7" path="res://Scenes/stat_block.tscn" id="1_hfx63"]
[ext_resource type="Script" path="res://Scripts/basic_enemy.gd" id="1_x3w1d"]
[ext_resource type="PackedScene" uid="uid://b4a8k8ev11gxg" path="res://Scenes/line_of_sight_cone.tscn" id="4_3aiq7"]
[ext_resource type="Texture2D" uid="uid://dc4g2haas420p" path="res://Sprites/Weapons/battle_axe3.png" id="5_gefb2"]

[sub_resource type="Animation" id="Animation_ji2en"]
resource_name = "swing_axe"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackContainer/AxeSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x4vys"]
_data = {
"swing_axe": SubResource("Animation_ji2en")
}

[node name="BasicEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_x3w1d")
travel_wait_time_min = 0.5
travel_wait_time_max = 1.5

[node name="StatBlock" parent="." instance=ExtResource("1_hfx63")]
starting_health = 50.0
health_regen_rate = 0.0
starting_stamina = 50.0
starting_mana = 0.0
mana_regen_rate = 0.0
walking_speed = 15000
sprint_speed = 25000
dodge_roll_multiplier = 0

[node name="EnemySprite" type="Sprite2D" parent="."]
texture = ExtResource("1_4xm8j")

[node name="BodyCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, 15, 7, 15, 11, 6, 10, -7, 7, -11, 1, -11, 0, -16, -5, -16, -7, -11, -12, -6, -13, 3)

[node name="TravelDecisionTimer" type="Timer" parent="."]
one_shot = true

[node name="RandomMovementTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LineOfSightCone" parent="." instance=ExtResource("4_3aiq7")]

[node name="SightRayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 171)
collision_mask = 2

[node name="AttackContainer" type="Node2D" parent="."]

[node name="AttackAnimation" type="AnimationPlayer" parent="AttackContainer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_x4vys")
}
speed_scale = 3.0

[node name="AxeSprite" type="Sprite2D" parent="AttackContainer"]
visible = false
texture = ExtResource("5_gefb2")
offset = Vector2(15, -15)

[node name="AxeArea2D" type="Area2D" parent="AttackContainer/AxeSprite"]
collision_layer = 4

[node name="AxeCollider" type="CollisionPolygon2D" parent="AttackContainer/AxeSprite/AxeArea2D"]
rotation = -0.00247703
polygon = PackedVector2Array(3.00247, -0.992566, 19.0272, -10.9529, 28.0321, -12.9306, 30.0569, -22.9256, 23.0742, -29.9429, 14.0718, -28.9652, 12.047, -18.9702, 1.00743, -2.99751)
disabled = true

[connection signal="timeout" from="TravelDecisionTimer" to="." method="_on_travel_decision_timer_timeout"]
[connection signal="timeout" from="RandomMovementTimer" to="." method="_on_random_movement_timer_timeout"]
[connection signal="body_entered" from="LineOfSightCone" to="." method="_on_line_of_sight_cone_body_entered"]
[connection signal="animation_finished" from="AttackContainer/AttackAnimation" to="." method="_on_attack_animation_animation_finished"]
[connection signal="body_entered" from="AttackContainer/AxeSprite/AxeArea2D" to="." method="_on_axe_area_2d_body_entered"]
[connection signal="body_exited" from="AttackContainer/AxeSprite/AxeArea2D" to="." method="_on_axe_area_2d_body_exited"]
